[package]
name = "kuzhersy_back"
version = "0.1.0"
authors = ["Alex Zherdev <misterrio535@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kuzhersy_back"
path = "src/main.rs"

[dependencies]
rsa = "0.4.0"
rand = "0.8.4"
serde_json = "1.0"
database = { path="src/database"}
init_lib = { path="src/init_lib"}
crypto_module = { path= "./src/crypto_module" }
