[package]
name = "SidZher_crypto"
version = "0.1.0"
authors = ["Alex Zherdev <misterrio535@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sidzher_crypto"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.75"
database = { path="src/database"}
init_lib = { path="src/init_lib"}
crypto_module = { path= "./src/crypto_module" }
serde = { version = "1.0.104", features = ["derive"] }
