[package]
name = "crypto_module"
version = "0.1.0"
authors = ["Alex Zherdev <misterrio535@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
init_lib = { path="../../src/init_lib" }
database = { path="../../src/database" }
rsa = "0.4.0"
redis = "0.21.5"
bcrypt = "0.10"