[package]
name = "database"
version = "0.1.0"
authors = ["Alex Zherdev <misterrio535@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#diesel = { version = "1.4.0", features = ["sqlite"] }
#dotenv = "0.10"
init_lib = { path="../../src/init_lib" }
redis = "0.21.5"