[package]
name = "init_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
dotenv = "0.15.0"
rsa = "0.4.0"
rand = "0.8.4"
redis = { version = "0.19.0", features = ["tls"] }
